more work added

--- a/menu.html
+++ b/menu.html
@@ -48,3 +48,17 @@
         <a href="review.jsp">Review<a>
     </li>
 </ul>
+
+<ul>
+    <li>
+        <a href="degree.jsp">Degree<a>
+    </li>
+</ul>
+
+<ul>
+    <li>
+        <a href="classes.jsp">Classes<a>
+    </li>
+</ul>
+
+
