finished prereq for courses

--- a/menu.html
+++ b/menu.html
@@ -42,3 +42,10 @@
         <a href="classes.jsp">Classes<a>
     </li>
 </ul>
+
+
+<ul>
+    <li>
+        <a href="prereq.jsp">prereq<a>
+    </li>
+</ul>
