Changed report names to include part a,b,c, etc. Almost finished up B but need to figure out how to return values from 2 different tables in the same query

--- a/queries/qmenu.html
+++ b/queries/qmenu.html
@@ -1,6 +1,13 @@
 <b>Queries Entry Menu</b>
+
 <ul>
     <li>
-        <a href="report_one.jsp">Report One<a>
+        <a href="report_one_a.jsp">Report One A<a>
+    </li>
+</ul>
+
+<ul>
+    <li>
+        <a href="report_one_b.jsp">Report One B<a>
     </li>
 </ul>
