trying to change report_one_b to work

--- a/queries/qmenu.html
+++ b/queries/qmenu.html
@@ -11,3 +11,9 @@
         <a href="report_one_b.jsp">Report One B<a>
     </li>
 </ul>
+
+<ul>
+    <li>
+        <a href="report_one_c.jsp">Report One C<a>
+    </li>
+</ul>
