starting process of adding demo data

--- a/queries/qmenu.html
+++ b/queries/qmenu.html
@@ -17,3 +17,9 @@
         <a href="report_one_c.jsp">Report One C<a>
     </li>
 </ul>
+
+<ul>
+    <li>
+        <a href="report_one_d.jsp">Report One D<a>
+    </li>
+</ul>
