ton of work on report_one_e. This is a bastard of a query

--- a/queries/qmenu.html
+++ b/queries/qmenu.html
@@ -23,3 +23,9 @@
         <a href="report_one_d.jsp">Report One D<a>
     </li>
 </ul>
+
+<ul>
+    <li>
+        <a href="report_one_e.jsp">Report One E<a>
+    </li>
+</ul>
