--- a/queries/qmenu.html
+++ b/queries/qmenu.html
@@ -29,3 +29,9 @@
         <a href="report_one_e.jsp">Report One E<a>
     </li>
 </ul>
+
+<ul>
+    <li>
+        <a href="report_two_a.jsp">Report Two A<a>
+    </li>
+</ul>
