fixed the headers of the queries

--- a/queries/qmenu.html
+++ b/queries/qmenu.html
@@ -35,3 +35,9 @@
         <a href="report_two_a.jsp">Report Two A<a>
     </li>
 </ul>
+
+<ul>
+    <li>
+        <a href="report_two_b.jsp">Report Two B<a>
+    </li>
+</ul>
