--- a/queries/qmenu.html
+++ b/queries/qmenu.html
@@ -41,3 +41,9 @@
         <a href="report_two_b.jsp">Report Two B<a>
     </li>
 </ul>
+
+<ul>
+    <li>
+        <a href="report_three_a.jsp">Report Three A<a>
+    </li>
+</ul>
