changed up the file names. Added default to lecture_info start. finished before insert lecture trigger

--- a/trigger/tmenu.html
+++ b/trigger/tmenu.html
@@ -7,7 +7,7 @@
 
 <ul>
     <li>
-        <a href="part4_2.jsp">Section Enrollment Limits<a>
+        <a href="enrollment_limit.jsp">Section Enrollment Limits<a>
     </li>
 </ul>
 
