finished the lecture, discussion, lab insert triggers. May add later functionality for extra credit

--- a/trigger/tmenu.html
+++ b/trigger/tmenu.html
@@ -7,6 +7,18 @@
 
 <ul>
     <li>
+        <a href="discussion.jsp">Discussion Meeting Conflicts<a>
+    </li>
+</ul>
+
+<ul>
+    <li>
+        <a href="lab.jsp">Lab Meeting Conflicts<a>
+    </li>
+</ul>
+
+<ul>
+    <li>
         <a href="enrollment_limit.jsp">Section Enrollment Limits<a>
     </li>
 </ul>
