--- a/trigger/tmenu.html
+++ b/trigger/tmenu.html
@@ -31,7 +31,7 @@
 
 <ul>
     <li>
-        <a href="prev_class.jsp">Materialized Views<a>
+        <a href="prev_class_input.jsp">Materialized Views<a>
     </li>
 </ul>
 
