fixed everything about milestone 4. previous implementation was about 75% correct or so

--- a/trigger/tmenu.html
+++ b/trigger/tmenu.html
@@ -1,4 +1,11 @@
 <b>Trigger Menu</b>
+
+<ul>
+    <li>
+        <a href="insert_section.jsp">New Section<a>
+    </li>
+</ul>
+
 <ul>
     <li>
         <a href="lecture.jsp">Lecture Meeting Conflicts<a>
