fixed a line in the demo data. better description to tmenu link 'materialized view'

--- a/trigger/tmenu.html
+++ b/trigger/tmenu.html
@@ -38,7 +38,7 @@
 
 <ul>
     <li>
-        <a href="prev_class_input.jsp">Materialized Views<a>
+        <a href="prev_class_input.jsp">Materialized View Insert<a>
     </li>
 </ul>
 
